# Luna-MLB-Analytics-Core

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs-link-check.yml
dashboard/: app.py
docs/: architecture.md  data-model.md  local-runbook.md  mvp-vs-production.md  offline-ingestion-flow.md  roadmap.md
docs/devlogs/: 2026-04-10-proof-run.md  2026-04-14-dashboard-action-lines.md
docs/ingestion/: luna_bundle_spec.md  receiver-workflow.md
examples/: example_github_update.md  example_linkedin_post.md
luna_comms/: README.md
luna_comms/config/: channels.example.json  repo_alignment.json  routing_rules.example.json
luna_comms/docs/: architecture.md  job-lifecycle.md  portfolio-demo.md  resume-snippets.md
luna_comms/schemas/: calendar_sync_job.schema.json  email_job.schema.json  job_transition.schema.json  notification_update_job.schema.json  outbound_job.schema.json
metadata/schemas/: export_artifact.schema.json
scripts/: approve_artifact.py  build_dashboard_warehouse.py  luna_comms_archive_jobs.py  luna_comms_common.py  luna_comms_detect_events.py  luna_comms_prepare_jobs.py  luna_comms_queue_jobs.py  luna_comms_seed_demo.py  luna_comms_send_jobs.py  receive_mlb_inbox.py  refresh_local_dashboard_data.sh  refresh_public_assets.py  run_daily_offline_update.py  run_derivations.py  run_ingest.py  run_luna_comms_cycle.py  smoke_run.py  validate_repo_alignment.py
src/luna_mlb_analytics/: __init__.py
src/mlb_core/: __init__.py  aggregate.py  config.py  (+10 more)
tests/: conftest.py  test_producer_overlay.py
(+21 files in other folders)
