[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-mlb-analytics"
version = "0.1.0"
description = "Offline-first MLB analytics pipeline with local dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Robert Sory"}]
dependencies = [
  "pandas>=2.2.0",
  "streamlit>=1.35.0",
  "matplotlib>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
